<resources>
    <string name="app_name"></string>
    <string name="title_activity_history">History</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="fruitsshoppingT2004E">T2004E</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="user_name">User Name</string>
    <string name="name">Name</string>
    <string name="menu_home">Home</string>

    <string name="confirm_password">Confirm Password</string>

    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="my_fruit">Fruits</string>
    <string name="hello_explore_your_dream_fruit">Hello Explore Your Dream Fruit</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="see_more">Xem Thêm</string>
    <string name="open_menu">Open Menu</string>
    <string name="close_menu">Close Menu</string>
    <string name="app_slogan">Welcome to android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_contact">List Contact</string>
    <string name="add_contact">Add Contact</string>
    <string name="list_song">List Song</string>
    <string name="add_song">add_song</string>
    <string name="about_us">About Us</string>
    <string name="policy">Policy</string>
    <string name="Add_song">AddSong</string>
</resources>