<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <ImageView
        android:id="@+id/imgRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/forground_design"
        android:scaleType="centerCrop"
        android:src="@drawable/bg"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-135dp"/>

    <TextView
        android:id="@+id/tView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:text="My Sell Fruits "
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/imgRegister"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tView1"/>

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="13dp"
        android:hint="@string/user_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tView2"
        app:layout_constraintWidth_percent=".8"
        android:autofillHints=""
        android:textColor="#ffffff"
        />
    <EditText
        android:id="@+id/txtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="13dp"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        app:layout_constraintWidth_percent=".8"
        android:autofillHints=""
        android:textColor="#ffffff"
        />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="13dp"
        android:hint="@string/password"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#ffffff"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserName"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_phone_enabled_24"
        android:drawablePadding="13dp"
        android:hint="@string/phone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#ffffff"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:onClick="mainActivity"
        android:textColor="@color/white"
        android:id="@+id/button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg_design"
        android:padding="14dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintWidth_percent=".8" />

    <TextView
        android:id="@+id/txtView3"
        android:layout_width="173dp"
        android:layout_height="28dp"
        android:layout_marginBottom="18dp"
        android:text="@string/already_registered"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/txtView4"
        android:onClick="Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/txtView3"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.322" />

</androidx.constraintlayout.widget.ConstraintLayout>